Enable mimir metamon

--- a/lgtm/templates/mimir-data-source.yaml
+++ b/lgtm/templates/mimir-data-source.yaml
@@ -14,3 +14,5 @@ data:
             type: prometheus
             url: http://lgtm-mimir-nginx/prometheus
             isDefault: true
+            jsonData:
+              prometheusType: mimir
