Fix mimir prometheusType

--- a/lgtm/templates/mimir-data-source.yaml
+++ b/lgtm/templates/mimir-data-source.yaml
@@ -15,4 +15,4 @@ data:
             url: http://lgtm-mimir-nginx/prometheus
             isDefault: true
             jsonData:
-              prometheusType: mimir
+              prometheusType: Mimir
