--- a/lgtm/Chart.yaml
+++ b/lgtm/Chart.yaml
@@ -13,9 +13,9 @@ dependencies:
   - name: grafana
     version: ~8.14
     repository: https://grafana.github.io/helm-charts
-  # - name: mimir-distributed
-  #   repository: "https://grafana.github.io/helm-charts"
-  #   version: ~5.7
+  - name: mimir-distributed
+    repository: "https://grafana.github.io/helm-charts"
+    version: ~5.7
   - name: k8s-monitoring
     version: ~2.0
     repository: https://grafana.github.io/helm-charts
