Named differently in loki namespace

--- a/loki/templates/loki-data-source.yaml
+++ b/loki/templates/loki-data-source.yaml
@@ -12,5 +12,5 @@ data:
           - name: Loki
             uid: loki
             type: loki
-            url: http://lgtm-loki-gateway
+            url: http://loki-gateway.loki.svc
             isDefault: false
