--- a/mimir/values.yaml
+++ b/mimir/values.yaml
@@ -22,23 +22,26 @@ mimir-distributed:
   alertmanager:
     strategy:
       type: Recreate
-    statefulStrategy:
-      type: Recreate
+      rollingUpdate: {}
   compactor:
     strategy:
       type: Recreate
+      rollingUpdate: {}
   distributor:
     strategy:
       type: Recreate
+      rollingUpdate: {}
   ingester:
     replicas: 1
     zoneAwareReplication:
       enabled: false
     strategy:
       type: Recreate
+      rollingUpdate: {}
   ruler:
     strategy:
       type: Recreate
+      rollingUpdate: {}
   querier:
     replicas: 1
   # query_frontend distributes among (1) querier.
