--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -14,161 +14,16 @@ global:
       mountPath: /etc/ssl/certs
       readOnly: true
 
-grafana:
-  # https://github.com/grafana/helm-charts/blob/grafana-8.13.1/charts/grafana/values.yaml
-  configMapAnnotations:
-    argocd.argoproj.io/sync-options: Replace=true
-  ingress:
-    enabled: true
-    ingressClassName: cilium
-    annotations:
-      cert-manager.io/cluster-issuer: real-cert
-    hosts:
-      - borgmon.local.symmatree.com
-    tls:
-      - secretName: grafana-tls
-        hosts:
-          - borgmon.local.symmatree.com
-  persistence:
-    enabled: true
-
-  admin:
-    existingSecret: "grafana-admin-user"
-    userKey: username
-    passwordKey: password
-
-  plugins:
-    - grafana-github-datasource
-    - grafana-lokiexplore-app
-    # - grafana-metricsdrilldown-app
-    # - grafana-mqtt-datasource
-
-  sidecar:
-    dashboards:
-      enabled: true
-      searchNamespace: ALL
-      folderAnnotation: "k8s-sidecar-target-directory"
-      provider:
-        folderUid: "sidecar"
-        folder: "Sidecar"
-        allowUiUpdates: true
-        foldersFromFilesStructure: true
-    datasources:
-      enabled: true
-      searchNamespace: ALL
-loki:
-  loki:
-    # Despite name this is actually multi-tenancy support.
-    auth_enabled: false
-    test:
-      enabled: false
-    commonConfig:
-      replication_factor: 1
-    schemaConfig:
-      configs:
-        - from: "2024-04-01"
-          store: tsdb
-          object_store: s3
-          schema: v13
-          index:
-            prefix: loki_index_
-            period: 24h
-    extraMemberlistConfig:
-      cluster_label: loki
-    pattern_ingester:
-      enabled: true
-    limits_config:
-      allow_structured_metadata: true
-      volume_enabled: true
-    ruler:
-      enable_api: true
-
-    storage:
-      bucketNames:
-        chunks: loki-chunks
-        ruler: loki-ruler
-        admin: loki-admin
-      s3:
-        # The output values if minio was enabled are found here:
-        # https://github.com/grafana/loki/blob/main/production/helm/loki/templates/_helpers.tpl#L213C2-L218C17
-        # We cannot directly use them but it is a good reference.
-        endpoint: https://minio.tales-tenant.svc
-        # For unclear reasons the Kubernetes dollar-paren syntax is not
-        # expanded but this is Loki's native expansion syntax with config.expand-env=true
-        secretAccessKey: "${SECRET_ACCESS_KEY}"
-        accessKeyId: "${ACCESS_KEY_ID}"
-        s3ForcePathStyle: true
-
-  # We have minio at home.
-  minio:
-    enabled: false
-  resultsCache:
-    allocatedMemory: 128
-  chunksCache:
-    # in MB
-    allocatedMemory: 512
-
-  deploymentMode: SingleBinary
-  singleBinary:
-    replicas: 1
-    persistence:
-      enableStatefulSetAutoDeletePVC: true
-      size: "10Gi"
-    extraArgs:
-      - -log-config-reverse-order
-      - -config.expand-env=true
-    extraEnv:
-      - name: SSL_CERT_FILE
-        value: /etc/ssl/certs/ca-certificates.crt
-    extraEnvFrom:
-      - secretRef:
-          name: lgtm-s3-creds
-    extraVolumes:
-      - name: ca-certificates
-        configMap:
-          name: trust-bundle
-    extraVolumeMounts:
-      - name: ca-certificates
-        mountPath: /etc/ssl/certs
-        readOnly: true
-
-  # Zero out replica counts of other deployment modes
-  backend:
-    replicas: 0
-  read:
-    replicas: 0
-  write:
-    replicas: 0
-
-  ingester:
-    replicas: 0
-  querier:
-    replicas: 0
-  queryFrontend:
-    replicas: 0
-  queryScheduler:
-    replicas: 0
-  distributor:
-    replicas: 0
-  compactor:
-    replicas: 0
-  indexGateway:
-    replicas: 0
-  bloomCompactor:
-    replicas: 0
-  bloomGateway:
-    replicas: 0
-
 k8s-monitoring:
   cluster:
     name: tales
   destinations:
     - name: localMimir
       type: prometheus
-      url: http://lgtm-mimir-distributor-headless.svc:8080/api/v1/push
+      url: http://lgtm-mimir-distributor-headless.mimir.svc:8080/api/v1/push
     - name: localLoki
       type: loki
-      url: http://lgtm-loki-gateway/loki/api/v1/push
+      url: http://lgtm-loki-gateway.loki.svc/loki/api/v1/push
 
   # https://github.com/grafana/k8s-monitoring-helm/blob/main/charts/k8s-monitoring/charts/feature-cluster-metrics/values.yaml
   clusterMetrics:
@@ -216,7 +71,7 @@ k8s-monitoring:
     alloy:
       instances:
         - name: alloy
-          namespace: lgtm
+          namespace: alloy
           labelSelectors:
             app.kubernetes.io/name: [alloy-metrics, alloy-singleton, alloy-logs]
     cert-manager:
