--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -1,7 +1,4 @@
 global:
-  extraEnvFrom:
-    - secretRef:
-        name: lgtm-s3-creds
   extraEnv:
     - name: SSL_CERT_FILE
       value: /etc/ssl/certs/ca-certificates.crt
@@ -20,10 +17,10 @@ k8s-monitoring:
   destinations:
     - name: localMimir
       type: prometheus
-      url: http://lgtm-mimir-distributor-headless.mimir.svc:8080/api/v1/push
+      url: http://mimir-distributor-headless.mimir.svc:8080/api/v1/push
     - name: localLoki
       type: loki
-      url: http://lgtm-loki-gateway.loki.svc/loki/api/v1/push
+      url: http://loki-gateway.loki.svc/loki/api/v1/push
 
   # https://github.com/grafana/k8s-monitoring-helm/blob/main/charts/k8s-monitoring/charts/feature-cluster-metrics/values.yaml
   clusterMetrics:
