Temporarily disable raconteur cert since it fails

--- a/static-certs/values.yaml
+++ b/static-certs/values.yaml
@@ -2,7 +2,7 @@ baseDomain: local.symmatree.com
 clusterIssuer: real-cert
 namespace: static-certs
 staticCerts:
-  - name: raconteur
-    subdomain: .ad
+  # - name: raconteur
+  #   subdomain: .ad
   - name: morpheus
   - name: homeassistant
