--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -32,6 +32,7 @@ k8s-monitoring:
       enabled: false
     windows-exporter:
       enabled: false
+      deploy: false
     kepler:
       enabled: false
     opencost:
