--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -59,6 +59,10 @@ k8s-monitoring:
     enabled: true
     serviceMonitor:
       enabled: true
+    extraConfig: |-
+      mimir.rules.kubernetes "default" {
+        address = "http://mimir-ruler.mimir.svc:8080"
+      }
   alloy-logs:
     enabled: true
     serviceMonitor:
