--- a/mimir/values.yaml
+++ b/mimir/values.yaml
@@ -58,7 +58,7 @@ mimir-distributed:
     serviceMonitor:
       enabled: true
       # Alloy sets this correctly, leave it alone.
-      clusterLabel: ~
+      clusterLabel: 0
     prometheusRule:
       enabled: true
       mimirAlerts: true
