--- a/loki/values.yaml
+++ b/loki/values.yaml
@@ -16,6 +16,9 @@ global:
 
 loki:
   loki:
+    # Ugh this is only because the chart will not let us avoid
+    # setting this, which would otherwise be injected just fine by alloy.
+    clusterLabel: tales
     # Despite name this is actually multi-tenancy support.
     auth_enabled: false
     test:
