--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -55,6 +55,14 @@ k8s-monitoring:
     enabled: true
     serviceMonitor:
       enabled: true
+    # This is the instance running prometheus.operator.probes
+    # so make it also the blackbox exporter.
+    # https://github.com/grafana/alloy/issues/2333#issuecomment-2741631302
+    # goes a long way here.
+    extraConfig: |-
+      prometheus.exporter.blackbox "blackbox_exporter" {
+        config = "{ modules: { http_2xx: { prober: http, timeout: 5s } } }"
+      }
   alloy-singleton:
     enabled: true
     serviceMonitor:
