--- a/argocd/values.yaml
+++ b/argocd/values.yaml
@@ -61,49 +61,51 @@ argo-cd:
 
     # ConfigMap for Config Management Plugins
     # Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/config-management-plugins/
-    cmp:
-      # -- Create the argocd-cmp-cm configmap
-      create: true
+    # cmp:
+    #   # -- Create the argocd-cmp-cm configmap
+    #   create: true
 
-      # -- Annotations to be added to argocd-cmp-cm configmap
-      annotations: {}
+    #   # -- Annotations to be added to argocd-cmp-cm configmap
+    #   annotations: {}
 
-      # -- Plugin yaml files to be added to argocd-cmp-cm
-      # Following https://raynix.info/archives/4565
-      plugins:
-        name: tanka
-        init:
-          command: ["sh", "-c", "/home/argocd/cmp-server/plugins/jb install"]
-        generate:
-          command: [
-              "sh",
-              "-c",
-              # This env var is set in the Application resource
-              "/home/argocd/cmp-server/plugins/tk show environments/${ARGOCD_ENV_TK_ENV} --dangerous-allow-redirect",
-            ]
-        discover:
-          fileName: "./environments/*/main.jsonnet"
+    # -- Plugin yaml files to be added to argocd-cmp-cm
+    # Supposed to be done in separate configs now but I
+    # can't find the docs.
+    # # Following https://raynix.info/archives/4565
+    # plugins:
+    #   name: tanka
+    #   init:
+    #     command: ["sh", "-c", "/home/argocd/cmp-server/plugins/jb install"]
+    #   generate:
+    #     command: [
+    #         "sh",
+    #         "-c",
+    #         # This env var is set in the Application resource
+    #         "/home/argocd/cmp-server/plugins/tk show environments/${ARGOCD_ENV_TK_ENV} --dangerous-allow-redirect",
+    #       ]
+    #   discover:
+    #     fileName: "./environments/*/main.jsonnet"
 
     # -- Repositories list to be used by applications
     ## Creates a secret for each key/value specified below to create repositories
     ## Note: the last example in the list would use a repository credential template, configured under "configs.credentialTemplates".
-    repositories:
-      {}
-      # istio-helm-repo:
-      #   url: https://storage.googleapis.com/istio-prerelease/daily-build/master-latest-daily/charts
-      #   name: istio.io
-      #   type: helm
-      # private-helm-repo:
-      #   url: https://my-private-chart-repo.internal
-      #   name: private-repo
-      #   type: helm
-      #   password: my-password
-      #   username: my-username
-      # private-repo:
-      #   url: https://github.com/argoproj/private-repo
+    # repositories:
+    #   {}
+    # istio-helm-repo:
+    #   url: https://storage.googleapis.com/istio-prerelease/daily-build/master-latest-daily/charts
+    #   name: istio.io
+    #   type: helm
+    # private-helm-repo:
+    #   url: https://my-private-chart-repo.internal
+    #   name: private-repo
+    #   type: helm
+    #   password: my-password
+    #   username: my-username
+    # private-repo:
+    #   url: https://github.com/argoproj/private-repo
 
     # -- Annotations to be added to `configs.repositories` Secret
-    repositoriesAnnotations: {}
+    # repositoriesAnnotations: {}
 
   ## Application controller
   controller:
