--- a/jupyterhub/application.yaml
+++ b/jupyterhub/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: jupyterhub
-  namespace: jupyterhub
+  namespace: argocd
   labels:
     name: jupyterhub
 spec:
