Turn things down a little

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -9,3 +9,9 @@ jupyterhub:
     # `cmd: null` allows the custom CMD of the Jupyter docker-stacks to be used
     # which performs further customization on startup.
     cmd: null
+  scheduling:
+    userScheduler:
+      replicas: 1
+  prePuller:
+    continuous:
+      enabled: false
