--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -31,6 +31,7 @@ jupyterhub:
     https:
       enabled: false
       type: secret
+      # Provisioned in templates/jupyterhub-cert.yaml
       secret:
         name: jupyterhub-tls
         key: tls.key
