Script for pull tokens, switch to our own image

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -50,9 +50,10 @@ jupyterhub:
     networkPolicy:
       enabled: false
     image:
-      name: quay.io/jupyter/datascience-notebook
-      # https://quay.io/repository/jupyter/datascience-notebook?tab=tags&tag=latest
-      tag: 2025-05-24
+      name: ghcr.io/symmatree/internal/datascience-notebook-ssh
+      tag: 2025-05-26
+      pullSecrets:
+      - name: ghcr-pull-token
     # `cmd: null` allows the custom CMD of the Jupyter docker-stacks to be used
     # which performs further customization on startup.
     cmd: null
