--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -61,8 +61,9 @@ jupyterhub:
     userScheduler:
       replicas: 1
   prePuller:
-    # This hook runs before the secrets get created.
-    enabled: false
+    hook:
+      # This hook runs before the secrets get created.
+      enabled: false
     continuous:
       enabled: false
   proxy:
