Rename secret, use consistent name

--- a/jupyterhub/templates/gchr-pull-secret.yaml
+++ b/jupyterhub/templates/gchr-pull-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-    name: gchr-pull-token
+    name: gchr-pull-secret
 type: kubernetes.io/dockerconfigjson
 spec:
     itemPath: "vaults/tales-secrets/items/jupyterhub-github-token"
