--- a/jupyterhub/docker/Dockerfile
+++ b/jupyterhub/docker/Dockerfile
@@ -4,24 +4,24 @@ ARG BASE_TAG=2025-05-24
 FROM $BASE_IMAGE:$BASE_TAG
 
 USER root
-# `find` invocation from https://github.com/antmelekhin/docker-systemd/blob/main/ubuntu/24.04.Dockerfile
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+
+RUN apt-get update \
+    && apt-get dist-upgrade -y \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     --no-install-recommends \
+    ansible \
+    apt-transport-https ca-certificates \
     apt-utils dialog \
-    gosu stow curl wget zsh zsh-autosuggestions zsh-syntax-highlighting \
-    sudo build-essential procps file git openssh-server \
-    python3-pip python3-venv tree bsdmainutils \
+    sudo procps file git openssh-server \
+    tree bsdmainutils \
     ubuntu-server aspell \
     && rm -rf /var/lib/apt/lists/*
-# && find /etc/systemd/system \
-# /lib/systemd/system \
-# -path '*.wants/*' \
-# -not -name '*journald*' \
-# -not -name '*systemd-tmpfiles*' \
-# -not -name '*systemd-user-sessions*' \
-# -print0 | xargs -0 rm -vf
+
+COPY install-tools.yaml /tmp/install-tools.yaml
+RUN ansible-playbook -v /tmp/install-tools.yaml -i localhost, --connection=local \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY systemctl3.py /usr/bin/systemctl
-# RUN test -L /bin/systemctl || ln -sf /usr/bin/systemctl /bin/systemctl
+COPY sshd_config /etc/ssh/sshd_config
 RUN rm -fv /etc/ssh/sshd_not_to_be_run
 RUN systemctl enable ssh
