Update tags in jupyter

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -57,7 +57,7 @@ jupyterhub:
     cmd: null
     image:
       name: ghcr.io/symmatree/internal/datascience-notebook-ssh
-      tag: 2025-05-26-2
+      tag: 2025-05-31
       pullSecrets:
         - name: ghcr-pull-secret
       # Pull always until we're stable.
