--- a/jupyterhub/docker/install-tools.yaml
+++ b/jupyterhub/docker/install-tools.yaml
@@ -86,6 +86,7 @@
           - procps
           - stow
           - sudo
+          - tmux
           - tree
           - xdg-utils
           - zsh
