--- a/jupyterhub/docker/install-tools.ansible.yaml
+++ b/jupyterhub/docker/install-tools.ansible.yaml
@@ -73,6 +73,7 @@
           - apt-utils
           - aspell
           - bsdmainutils
+          - buildah
           - ca-certificates
           - dialog
           - dnsutils
